# efefte

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-release.yml
docs/: index.html
include/: efefte.h  test.h
installer/: Install.applescript  install.sh
plugin/AudioUnit/: CMakeLists.txt  EFEFTEAudioUnit.h  EFEFTEAudioUnit.mm  EFEFTEFactory.mm  Info.plist  KEYQAudioUnit.h  KEYQAudioUnit.mm  KEYQFactory.mm
plugin/Standalone/: CMakeLists.txt  Info.plist  main.mm
src/: efefte.cxx  keyq.cxx  main.cxx  test.cxx
